<resources>
    <string name="app_name">Europoly</string>
    <string name="new_game">New game</string>
    <string name="resume_game">Resume game</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="choose_mode">Choose mode</string>
    <string name="hot_seat">Hot seat</string>
    <string name="multi_player">Multi player</string>
    <string name="back">Back</string>
    <string name="sound">Sound</string>
    <string name="effects">Effects</string>
    <string name="vibration">Vibration</string>
    <string name="color_theme">Color theme</string>
    <string name="AI_level">AI level</string>
    <string name="language">Language</string>
    <string name="apply">Apply</string>
    <string name="player_name">Player name</string>
    <string name="AI">AI</string>
    <string name="color">Color</string>
    <string-array name="player_colors">
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Black</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Polski</item>
    </string-array>
    <string-array name="theme_colors">
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
    </string-array>
    <string-array name="AI_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>
