<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:onClick="newGame"
        android:id="@+id/new_game"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="@+id/resume_game"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resume_game"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="resumeGame"
        android:id="@+id/resume_game"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:text="@string/resume_game"
        app:layout_constraintEnd_toEndOf="@+id/settings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/settings"
        app:layout_constraintTop_toBottomOf="@+id/new_game" />

    <Button
        android:onClick="settings"
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="@+id/exit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/exit"
        app:layout_constraintTop_toBottomOf="@+id/resume_game" />

    <Button
        android:onClick="exit"
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />
</android.support.constraint.ConstraintLayout>